[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/gui/configuracoesMenu.theme" type="Theme" id=1]
[ext_resource path="res://menuConfiguracoes.gd" type="Script" id=2]

[node name="menuConfiguracoes" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -295.0
offset_right = 460.0
offset_bottom = 295.0
custom_minimum_size = Vector2( 920, 590 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.254902, 0.258824, 1 )

[node name="configuracoesTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_alignment = 0

[node name="Vídeo" type="TabBar" parent="configuracoesTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 43.0
offset_right = -4.0
offset_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="configuracoesTabs/Vídeo"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_left = 25
theme_override_constants/margin_bottom = 25

[node name="videoConfiguracoes" type="GridContainer" parent="configuracoesTabs/Vídeo/MarginContainer"]
offset_left = 25.0
offset_top = 25.0
offset_right = 887.0
offset_bottom = 518.0
theme_override_constants/v_separation = 20
columns = 2

[node name="exibicaoModoLabel" type="Label" parent="configuracoesTabs/Vídeo/MarginContainer/videoConfiguracoes"]
offset_right = 278.0
offset_bottom = 44.0
text = "Modo de Exibição"

[node name="modoExibicaoButton" type="OptionButton" parent="configuracoesTabs/Vídeo/MarginContainer/videoConfiguracoes"]
offset_left = 748.0
offset_right = 862.0
offset_bottom = 44.0
size_flags_horizontal = 10
text = "Janela"
items = [ "Janela", null, false, 0, null, "Tela Cheia", null, false, 1, null ]
selected = 0

[node name="exbirFpsLabel" type="Label" parent="configuracoesTabs/Vídeo/MarginContainer/videoConfiguracoes"]
offset_top = 64.0
offset_right = 278.0
offset_bottom = 108.0
text = "Exibir FPS"

[node name="exbirFpsButton" type="CheckButton" parent="configuracoesTabs/Vídeo/MarginContainer/videoConfiguracoes"]
offset_left = 798.0
offset_top = 64.0
offset_right = 862.0
offset_bottom = 108.0
size_flags_horizontal = 10

[node name="Áudio" type="TabBar" parent="configuracoesTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 43.0
offset_right = -4.0
offset_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="configuracoesTabs/Áudio"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_left = 25
theme_override_constants/margin_bottom = 25

[node name="audioConfiguracao" type="GridContainer" parent="configuracoesTabs/Áudio/MarginContainer"]
offset_left = 25.0
offset_top = 25.0
offset_right = 887.0
offset_bottom = 518.0
theme_override_constants/v_separation = 20
columns = 2

[node name="volumeLabel" type="Label" parent="configuracoesTabs/Áudio/MarginContainer/audioConfiguracao"]
offset_right = 287.0
offset_bottom = 44.0
text = "Volume Geral"

[node name="volumeSlider" type="HSlider" parent="configuracoesTabs/Áudio/MarginContainer/audioConfiguracao"]
offset_left = 462.0
offset_right = 862.0
offset_bottom = 44.0
custom_minimum_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="musicVoleLabel" type="Label" parent="configuracoesTabs/Áudio/MarginContainer/audioConfiguracao"]
offset_top = 64.0
offset_right = 287.0
offset_bottom = 108.0
text = "Volume da Música"

[node name="musicVolSlider" type="HSlider" parent="configuracoesTabs/Áudio/MarginContainer/audioConfiguracao"]
offset_left = 462.0
offset_top = 64.0
offset_right = 862.0
offset_bottom = 108.0
custom_minimum_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[connection signal="item_selected" from="configuracoesTabs/Vídeo/MarginContainer/videoConfiguracoes/modoExibicaoButton" to="." method="_on_modoExibicaoButton_item_selected"]
[connection signal="toggled" from="configuracoesTabs/Vídeo/MarginContainer/videoConfiguracoes/exbirFpsButton" to="." method="_on_exbirFpsButton_toggled"]
[connection signal="value_changed" from="configuracoesTabs/Áudio/MarginContainer/audioConfiguracao/volumeSlider" to="." method="_on_volumeSlider_value_changed"]
[connection signal="value_changed" from="configuracoesTabs/Áudio/MarginContainer/audioConfiguracao/musicVolSlider" to="." method="_on_musicVolSlider_value_changed"]
